k8s/consensus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consensus-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consensus-worker
  template:
    metadata:
      labels:
        app: consensus-worker
    spec:
      containers:
        - name: consensus-worker
          image: measurementcollector/consensus-worker:latest
