k8s/ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-service
  template:
    metadata:
      labels:
        app: ingress-service
    spec:
      containers:
        - name: ingress-service
          image: measurementcollector/ingress:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
spec:
  selector:
    app: ingress-service
  ports:
    - port: 8080
      targetPort: 8080
