k8s/reports-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reports-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reports-service
  template:
    metadata:
      labels:
        app: reports-service
    spec:
      containers:
        - name: reports-service
          image: measurementcollector/reports-service:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: reports-service
spec:
  selector:
    app: reports-service
  ports:
    - port: 8083
      targetPort: 8083
