k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: measurementcollector-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/ingest
            pathType: Prefix
            backend:
              service:
                name: ingress-service
                port:
                  number: 8080
          - path: /api/reports
            pathType: Prefix
            backend:
              service:
                name: ingress-service
                port:
                  number: 8080
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: ingress-service
                port:
                  number: 8080
